--- a/Spiraloid2.cbp
+++ b/Spiraloid2.cbp
@@ -144,8 +144,8 @@
 		<Unit filename="src/ArrayImplementation.cpp" />
 		<Unit filename="src/Colors.cpp" />
 		<Unit filename="src/Colors.hpp" />
-		<Unit filename="src/Display.cpp" />
-		<Unit filename="src/Display.hpp" />
+		<Unit filename="src/Display.cpp.old" />
+		<Unit filename="src/Display.hpp.old" />
 		<Unit filename="src/Equations.cpp" />
 		<Unit filename="src/Equations.hpp" />
 		<Unit filename="src/Inline.hpp" />
@@ -159,22 +159,23 @@
 		<Unit filename="src/NewMain.cpp" />
 		<Unit filename="src/NewProgram.cpp" />
 		<Unit filename="src/NewProgram.hpp" />
-		<Unit filename="src/PlotData.cpp" />
 		<Unit filename="src/PlotData.hpp" />
-		<Unit filename="src/Position.hpp" />
-		<Unit filename="src/Program.cpp" />
-		<Unit filename="src/Program.hpp" />
+		<Unit filename="src/Position.hpp.old" />
+		<Unit filename="src/Program.cpp.old" />
+		<Unit filename="src/Program.hpp.old" />
+		<Unit filename="src/ProgramScreen.cpp" />
+		<Unit filename="src/ProgramScreen.hpp" />
 		<Unit filename="src/RefreshRate.hpp" />
 		<Unit filename="src/ResizeTestMain.cpp">
 			<Option link="0" />
 		</Unit>
-		<Unit filename="src/SignalHandling.cpp" />
-		<Unit filename="src/SignalHandling.hpp" />
+		<Unit filename="src/SignalHandling.cpp.old" />
+		<Unit filename="src/SignalHandling.hpp.old" />
 		<Unit filename="src/SpiraloidConfig.cpp" />
 		<Unit filename="src/SpiraloidConfig.hpp" />
 		<Unit filename="src/SpiraloidController.cpp" />
 		<Unit filename="src/SpiraloidController.hpp" />
-		<Unit filename="src/SpiraloidMain.cpp" />
+		<Unit filename="src/SpiraloidMain.cpp.old" />
 		<Unit filename="src/SpiraloidScreen.cpp" />
 		<Unit filename="src/SpiraloidScreen.hpp" />
 		<Unit filename="src/Spirals.cpp" />
